# groonga-normalizer-mysql

./: .clang-format  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  COPYING  Makefile.am  README.md  Rakefile  autogen.sh  compose.yaml  config.h.cmake  configure.ac  groonga-normalizer-mysql.pc.in
normalizers/: CMakeLists.txt  Makefile.am  mysql.c  mysql_general_ci_table.h  mysql_sources.am  mysql_unicode_1400_ai_ci_table.h  mysql_unicode_1400_ai_cs_table.h  mysql_unicode_1400_as_ci_table.h  mysql_unicode_1400_as_cs_table.h  mysql_unicode_520_ci_except_kana_ci_kana_with_voiced_sound_mark_table.h  mysql_unicode_520_ci_table.h  mysql_unicode_900_ai_ci_table.h  mysql_unicode_900_as_ci_table.h  mysql_unicode_900_as_cs_table.h  mysql_unicode_900_ja_as_cs_ks_table.h  mysql_unicode_900_ja_as_cs_table.h  mysql_unicode_ci_except_kana_ci_kana_with_voiced_sound_mark_table.h  mysql_unicode_ci_table.h
test/: Makefile.am  files.am  run-test.sh  update-files.sh
test/suite/: remove_blank.expected  with_types.expected
test/suite/general_ci/: character_length_2.expected  character_length_2.test  character_length_3.expected  character_length_3.test  page_00.expected  remove_blank.expected  remove_blank.test  spaces.expected  spaces.test  with_checks.expected  with_checks.test  with_types.expected  with_types.test
test/suite/unicode/14.0.0/ai_ci/: alphabet.expected  alphabet.test  japanese_accent.expected  japanese_accent.test  japanese_kana.expected  japanese_kana.test  japanese_small.expected  japanese_small.test  japanese_width.expected  japanese_width.test
test/suite/unicode_520_ci/: character_length_2.expected  character_length_2.test  character_length_3.expected  character_length_3.test  character_length_4.expected  character_length_4.test  emoji.expected  emoji.reject  emoji.test  halfwidth_katakana_voiced_sound_mark.expected  halfwidth_katakana_voiced_sound_mark.test  page_00.expected  page_00.test  remove_blank.expected  remove_blank.test  with_checks.expected  with_checks.test  with_types.expected  with_types.test  zero_weight.expected  zero_weight.test
test/suite/unicode_520_ci_except_kana_ci_kana_with_voiced_sound_mark/: halfwidth_katakana_ha_line_with_semi_voiced_sound_mark.expected  halfwidth_katakana_ha_line_with_semi_voiced_sound_mark.test  halfwidth_katakana_ha_line_with_voiced_sound_mark.expected  halfwidth_katakana_ha_line_with_voiced_sound_mark.test  halfwidth_katakana_small.expected  halfwidth_katakana_small.test  halfwidth_katakana_with_voiced_sound_mark.expected  halfwidth_katakana_with_voiced_sound_mark.test  hiragana_semi_voiced_sound_mark.expected  hiragana_semi_voiced_sound_mark.test  hiragana_small.expected  hiragana_small.test  hiragana_with_voiced_sound_mark.expected  hiragana_with_voiced_sound_mark.test  katakana_small.expected  katakana_small.test  katakana_with_semi_voiced_sound_mark.expected  katakana_with_semi_voiced_sound_mark.test  katakana_with_voiced_sound_mark.expected  katakana_with_voiced_sound_mark.test  remobe_blank.expected  remobe_blank.test  with_checks.expected  with_checks.test  with_types.expected  with_types.test  zero_weight.expected  zero_weight.test
test/suite/unicode_900/ai_ci/: alphabet.expected  alphabet.test  japanese_accent.expected  japanese_accent.test  japanese_kana.expected  japanese_kana.test  japanese_small.expected  japanese_small.test  japanese_width.expected  japanese_width.test
test/suite/unicode_900/as_ci/: alphabet.expected  alphabet.test  japanese_accent.expected  japanese_accent.test  japanese_kana.expected  japanese_kana.test  japanese_small.expected  japanese_small.test  japanese_width.expected  japanese_width.test
test/suite/unicode_900/as_cs/: alphabet.expected  alphabet.test  japanese_accent.expected  japanese_accent.test  japanese_kana.expected  japanese_kana.test  japanese_small.expected  japanese_small.test  japanese_width.expected  japanese_width.test
test/suite/unicode_900/ja_as_cs/: alphabet.expected  alphabet.test  japanese_accent.expected  japanese_accent.test  japanese_kana.expected  japanese_kana.test  japanese_small.expected  japanese_small.test  japanese_width.expected  japanese_width.test
test/suite/unicode_900/ja_as_cs_ks/: alphabet.expected  alphabet.test  japanese_accent.expected  japanese_accent.test  japanese_kana.expected  japanese_kana.test  japanese_small.expected  japanese_small.test  japanese_width.expected  japanese_width.test
test/suite/unicode_ci/: character_length_2.expected  character_length_2.test  character_length_3.expected  character_length_3.test  emoji.expected  emoji.test  halfwidth_katakana_voiced_sound_mark.expected  halfwidth_katakana_voiced_sound_mark.test  page_00.expected  page_00.test  remove_blank.expected  remove_blank.test  remove_blank_full_width.expected  remove_blank_full_width.test  with_checks.expected  with_checks.test  with_types.expected  with_types.test  zero_weight.expected  zero_weight.test
test/suite/unicode_ci_except_kana_ci_kana_with_voiced_sound_mark/: halfwidth_katakana_ha_line_with_semi_voiced_sound_mark.expected  halfwidth_katakana_ha_line_with_semi_voiced_sound_mark.test  halfwidth_katakana_ha_line_with_voiced_sound_mark.expected  halfwidth_katakana_ha_line_with_voiced_sound_mark.test  halfwidth_katakana_small.expected  halfwidth_katakana_small.test  halfwidth_katakana_voiced_sound_mark.expected  halfwidth_katakana_voiced_sound_mark.test  halfwidth_katakana_with_voiced_sound_mark.expected  halfwidth_katakana_with_voiced_sound_mark.test  hiragana_semi_voiced_sound_mark.expected  hiragana_semi_voiced_sound_mark.test  hiragana_small.expected  hiragana_small.test  hiragana_with_voiced_sound_mark.expected  hiragana_with_voiced_sound_mark.test  katakana_small.expected  katakana_small.test  katakana_with_semi_voiced_sound_mark.expected  katakana_with_semi_voiced_sound_mark.test  katakana_with_voiced_sound_mark.expected  katakana_with_voiced_sound_mark.test  remobe_blank.expected  remobe_blank.test  with_checks.expected  with_checks.test  with_types.expected  with_types.test  zero_weight.expected  zero_weight.test
(+98 files in other folders)
